[U]使用绝对路径地址 完善图书模块

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>鱼书</title>
-  <link rel="stylesheet" href="static/3rd/ui/bootstrap.min.css">
-  <link rel="stylesheet" href="static/css/base.css">
-  <link rel="shortcut icon" href="static/images/icon.png">
+  <link rel="stylesheet" href="/static/3rd/ui/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/css/base.css">
+  <link rel="shortcut icon" href="/static/images/icon.png">
 </head>
 <body>
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
-<script src="static/3rd/jquery-3.2.1.min.js"></script>
-<script src="static/3rd/bootstrap.min.js"></script>
-<script src="static/js/base.js"></script>
+<script src="/static/3rd/jquery-3.2.1.min.js"></script>
+<script src="/static/3rd/bootstrap.min.js"></script>
+<script src="/static/js/base.js"></script>
 </html>
